# leptos_axum_shuttle_ex

./: Cargo.toml  README.md  Trunk.toml  index.html  input.css  rust-toolchain.toml
.cargo/: config.toml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/static/: index.html  output-a3888822895f272b.css  tailwind-csr-trunk-334d7db6e8c1a08f.js  tailwind-csr-trunk-334d7db6e8c1a08f_bg.wasm
src/: app.rs
style/: output.css
